--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -93,4 +93,28 @@
 <br>
 <br>
 
+    <footer>
+      <img src="../Resources/tmdblogo.png" class="tmdblogo">
+
+      <div class="nombres">
+      <ul>
+        <li>MATIAS GALLARDO</li>
+        <li>JUAN IGNACIO BEDOIAN</li>
+        <li>SOL RODRIGUEZ ARANCIBIA</li>
+      </ul>
+    </div>
+         </div>
+
+   </footer>
+
+
+
+
+
+
    
+
+  </body>
+<script type="text/javascript" src="detallePeli.js"></script>
+<script type="text/javascript" src="../6-Peliculas fav/PelisPreferidas.js"></script>
+</html>
