--- a/public/stylesheets/listadoDeGeneros.css
+++ b/public/stylesheets/listadoDeGeneros.css
@@ -82,7 +82,7 @@ text-align: center;
   height:50vh;
 }
 body{
-  background-image: url("../Resources/Fondo.png");
+  background-image: url("/images/Fondo.png");
   background-size: cover;
   height: 123vh;
 }
