--- a/views/resultadoDeBusqueda.ejs
+++ b/views/resultadoDeBusqueda.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="ResultadoDelBuscador.css">
+    <link rel="stylesheet" href="/stylesheets/resultadoDelBuscador.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
@@ -17,7 +17,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="../Resources/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
@@ -42,7 +42,7 @@
     </section>
 
     <footer>
-      <img src="../Resources/tmdblogo.png" class="tmdblogo">
+      <img src="/images/tmdblogo.png" class="tmdblogo">
 
       <div class="nombres">
       <ul>
@@ -57,6 +57,6 @@
 
 
   </body>
-<script type="text/javascript" src="ResultadoDelBuscador.js"></script>
-<script type="text/javascript" src="../6-Peliculas fav/PelisPreferidas.js"></script>
+<script type="text/javascript" src="/javascripts/resultadoDelBuscador.js"></script>
+<script type="text/javascript" src="/javascripts/PelisPreferidas.js"></script>
 </html>
