--- a/public/stylesheets/pagina.css
+++ b/public/stylesheets/pagina.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 html{
-  cursor: url(../Resources/giphy.gif),default;
+  cursor: url(/images/giphy.gif),default;
   height: 100%;
 }
 body{
-  cursor: url(../Resources/giphy.gif),default;
+  cursor: url(/images/giphy.gif),default;
   background-size: cover;
-  background-image: url("../Resources/Fondo.png");
+  background-image: url("/images/Fondo.png");
 }
 
 
