--- a/public/stylesheets/peliculasPorGenero.css
+++ b/public/stylesheets/peliculasPorGenero.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 html{
-  cursor: url(../Resources/giphy.gif),default;
+  cursor: url(/images/giphy.gif),default;
 }
 body{
-  cursor: url(../Resources/giphy.gif),default;
-  background-image: url("../Resources/Fondo.png");
+  cursor: url(/images/giphy.gif),default;
+  background-image: url("/images/Fondo.png");
   background-size: cover;
 
 }
