--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
 
-    <link rel="stylesheet" href="detallePeli.css">
+    <link rel="stylesheet" href="/stylesheets/detallePeli.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
@@ -15,7 +15,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light idea" id="navbar">
 
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="../Resources/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
@@ -94,7 +94,7 @@
 <br>
 
     <footer>
-      <img src="../Resources/tmdblogo.png" class="tmdblogo">
+      <img src="/images/tmdblogo.png" class="tmdblogo">
 
       <div class="nombres">
       <ul>
@@ -112,9 +112,9 @@
 
 
 
-   
+
 
   </body>
-<script type="text/javascript" src="detallePeli.js"></script>
-<script type="text/javascript" src="../6-Peliculas fav/PelisPreferidas.js"></script>
+<script type="text/javascript" src="/javascripts/detallePeli.js"></script>
+<script type="text/javascript" src="/javascripts/PelisPreferidas.js"></script>
 </html>
