creo que termino la migracion!!!!!!!!!!!!!

--- a/views/peliculasFavoritas.ejs
+++ b/views/peliculasFavoritas.ejs
@@ -17,16 +17,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
         </li>
         <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="../6-Peliculas fav/PelisPreferidas.html">Favorite movies</a>
+          <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
       </ul>
-      <form method="get" action="../4-Resultado de busqueda/ResultadoDelBuscador.html" class="uk-search uk-search-default buscar">
+      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
           <span class="uk-search-icon-flip" uk-search-icon></span>
           <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" >
       </form>
