--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -15,16 +15,16 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light idea" id="navbar">
 
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
         </li>
         <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="../6-Peliculas fav/PelisPreferidas.html">Favorite movies</a>
+          <a class="nav-link" href="/peliculas/peliPreferida">Favorite movies</a>
         </li>
       </ul>
-      <form method="get" action="../4-Resultado de busqueda/ResultadoDelBuscador.html" class="uk-search uk-search-default buscar">
+      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
           <span class="uk-search-icon-flip" uk-search-icon></span>
           <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" >
       </form>
@@ -116,5 +116,7 @@
 
   </body>
 <script type="text/javascript" src="/javascripts/detallePeli.js"></script>
-<script type="text/javascript" src="/javascripts/PelisPreferidas.js"></script>
+<script type="text/javascript" src="/javascripts/peliPreferida.js"></script>
+<script type="text/javascript" src="/javascripts/resultadoDelBuscador.js"></script>
+<script type="text/javascript" src="/javascripts/peliculasPorGenero.js"></script>
 </html>
