--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,13 +15,13 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
 
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
         </li>
         <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="../6-Peliculas fav/PelisPreferidas.html">Favorite movies</a>
+          <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
       </ul>
       <!-- <form method="get"class="form-inline my-2 my-lg-0">
@@ -29,7 +29,7 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form> -->
 
-      <form method="get" action="../4-Resultado de busqueda/ResultadoDelBuscador.html" class="uk-search uk-search-default buscar">
+      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
                       <span class="uk-search-icon-flip" uk-search-icon></span>
                       <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search" >
                   </form>
@@ -129,8 +129,8 @@
   </body>
 
 
-<script type="text/javascript" src="/javascripts/PeliPreferida.js"></script>
-<script type="text/javascript" src="/javascripts/Home.js"></script>
+<script type="text/javascript" src="/javascripts/peliPreferida.js"></script>
+<script type="text/javascript" src="/javascripts/home.js"></script>
 <script type="text/javascript" src="/javascripts/resultadoDelBuscador.js">
 
 </script>
