--- a/views/resultadoDeBusqueda.ejs
+++ b/views/resultadoDeBusqueda.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="/stylesheets/resultadoDelBuscador.css">
+    <link rel="stylesheet" href="/stylesheets/resultadoDelBuscado.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
@@ -17,16 +17,16 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="../1-Home/Home.html"> <img src="/images/logo.png" class="loguito" alt=""> </a>
+      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="../2-Generos/ListadoDeGeneros.html">Genres<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
         </li>
         <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="../6-Peliculas fav/PelisPreferidas.html">Favorite movies</a>
+          <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
       </ul>
-      <form method="get" action="../4-Resultado de busqueda/ResultadoDelBuscador.html" class="uk-search uk-search-default buscar">
+      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
           <span class="uk-search-icon-flip" uk-search-icon></span>
           <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" >
       </form>
