--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,7 +116,7 @@
             <ul>
               <li>MATIAS GALLARDO</li>
               <li>JUAN IGNACIO BEDOIAN</li>
-              <li>SOL RODRIGUEZ ARANCIBIA</li>
+              <li>LUCIANO MARCOGLIESE</li>
             </ul>
           </div>
                </div>
