--- a/views/listadoDeGeneros.ejs
+++ b/views/listadoDeGeneros.ejs
@@ -87,7 +87,7 @@
   <ul>
     <li>MATIAS GALLARDO</li>
     <li>JUAN IGNACIO BEDOIAN</li>
-    <li>SOL RODRIGUEZ ARANCIBIA</li>
+    <li>LUCIANO MARCOGLIESE</li>
   </ul>
 </div>
      </div>
