avanze de buscador 1

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,6 +35,28 @@
                   </form>
       <a  id="login" style="color:gold"; class="uk-button uk-button-default btn btn-outline-warning" href="#modal-sections" uk-toggle>Login</a>
 
+<h2>Buscador de Usuarios</h2>
+<form action="/home/search" method="GET">
+<input type="text" name="search">
+<input type="submit" value="search">
+
+
+
+
+
+
+
+
+
+</form>
+
+
+
+
+
+
+
+
 <div id="modal-sections" uk-modal>
     <div class="uk-modal-dialog">
         <button class="uk-modal-close-default" type="button" uk-close></button>
