--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,8 @@
         <li class="nav-item">
           <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
         </li>
-        <li id="pelispref"class="nav-item">
+        
+        <li id=""class="nav-item">
           <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
       </ul>
@@ -33,31 +34,58 @@
                       <span class="uk-search-icon-flip" uk-search-icon></span>
                       <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search" >
                   </form>
-      <a  id="login" style="color:gold"; class="uk-button uk-button-default btn btn-outline-warning" href="#modal-sections" uk-toggle>Login</a>
+      <a  id="login" style="color:gold"; class="uk-button uk-button-default btn btn-outline-warning" href="#modal-sections" uk-toggle>Registrate</a>
 
 <div id="modal-sections" uk-modal>
     <div class="uk-modal-dialog">
         <button class="uk-modal-close-default" type="button" uk-close></button>
         <div class="uk-modal-header">
-            <h2 class="uk-modal-title">Login</h2>
+            <h2 class="uk-modal-title">Registrate!</h2>
         </div>
         <div class="uk-modal-body">
          
         
             </ul>
           <form class="logincompleto" action="/peliculas" method="post">
-          <label for="nombre">Name</label>
+         <!--  <label for="nombre">Name</label>
           <input class="name" type="text" name="nombre" value="" required>
         
           <br>
           <label for="email">Email</label>
           <input type="email" name="email2" value="" required>
-        </div>
+        </div> -->
+        <form action="/usuario" method="POST">
+          <br>
+           <div>
+               <label for="">Nombre</label>
+               <input type="text" name="nombre">
+           </div>
+           
+           <br>
+           <div>
+               <label for="">Email</label>
+               <input type="text" name="email">
+           </div>
+           <br>
+           <div>
+               <label for="">Password</label>
+               <input type="password" name="contraseña">
+           
+           </div>
+           <div>
+             <br>
+               <label for="">Fecha de Nacimiento</label>
+               <input type="date" name="nacimiento">
+           
+           </div>
+           <br>
+          <!--  <input type="submit" value="Enviar"> -->
+      
         <div class="uk-modal-footer uk-text-right">
             <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
             <button class="uk-button uk-button-primary" type="submit">Send</button>
         </div>
-            </form>
+      </form>      
     </div>
   </div>
     </div>
@@ -122,7 +150,6 @@
 
 <script type="text/javascript" src="/javascripts/peliPreferida.js"></script>
 <script type="text/javascript" src="/javascripts/home.js"></script>
-<script type="text/javascript" src="/javascripts/resultadoDelBuscador.js">
-
-</script>
+<script type="text/javascript" src="/javascripts/resultadoDelBuscador.js"></script>
+<script type="text/javascript" src="/javascripts/LoginCompleto.js"></script>
 </html>
