--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -7,15 +7,22 @@
 </head>
 <body>
 
-
+    
     <h1>
         <%=unUsuario.nombre %>
     </h1>
     <p>
         Email: <%=unUsuario.email %>
     </p>
+
+
+        <% for ( let i=0 ; i< unUsuario.resena.length; i++) { %> 
+    <p>
+
+        Resenas: <%=unUsuario.resena[i].resenas %>
+    </p>
   
-    
+ <% } %>
 
 
     
