css de detalle peli

--- a/public/stylesheets/detallePeli.css
+++ b/public/stylesheets/detallePeli.css
@@ -168,6 +168,9 @@ section{
     position: relative;
 }
 
+.labelsDeResenas {
+  color: white;
+}
 .fechaEstreno h2{
   font-family: Poppins;
   font-weight: normal;
