--- a/views/usuariosResultados.ejs
+++ b/views/usuariosResultados.ejs
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/stylesheets/usuarioresultado.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
    
-<h1>Usuarios encontrados:</h1>
+<h1 class="a">Usuarios encontrados:</h1>
 
 
     <% for (let i = 0; i< usuarios.length; i++) { %>
 <ul> 
         <li>
-            <a href="/usuario/detalle/<%=usuarios[i].id%>" >
+            <a class="b" href="/usuario/detalle/<%=usuarios[i].id%>" >
              Nombre: <%=usuarios[i].nombre %>
         </li>
        
