usuario y pelicula .id reseña

--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -97,7 +97,7 @@
 <button class= "botonResena uk-button uk-button-default uk-margin uk-button-secondary">Crear reseña</button>
 
 
-<form  class= "formularioResena" action="/peliculas/detalle" method="POST" style="display: none;" > 
+<form  class= "formularioResena" action="/peliculas/detalle?idDePeli=<%=idPelicula%>" method="POST" style="display: none;" > 
                         
                         
   <div>
