--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,10 @@
           <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
 
+        <li id=""class="nav-item">
+          <a class="nav-link" href="/peliculas/misResenas">Mis reseñas</a>
+        </li>
+
         <li class= "nav-item">
 
           
@@ -55,12 +59,6 @@
 
 
 </form>
-
-
-
-
-
-
 
 
 <div id="modal-sections" uk-modal>
