--- a/views/misResenas.ejs
+++ b/views/misResenas.ejs
@@ -8,6 +8,19 @@
 <body>
   
 
+  <form action="/usuario/misResenas" method="POST">
+    <div>
+        <label for="">Email</label>
+        <input type="email" name="email" value="">
+    </div>
+    <div>
+        <label for="">Contraseña</label>
+        <input type="password" name="contraseña" value="">
+    </div>
+   
+    
+    <input type="submit" value="Enviar">
+</form>
 
 
 
