--- a/public/stylesheets/detallePeli.css
+++ b/public/stylesheets/detallePeli.css
@@ -11,11 +11,15 @@ body{
 
 }
 .resenas{
-  background-color: #3955D3;
+ /*  background-color: #3955D3; */
   text-align: center;
   margin-left: 30%;
   margin-right: 30%;
+  border-style: solid;
+  border-color: white;
+  margin-bottom: 2%;
 }
+
 
 footer{
     background-color: rgba(112, 148, 181, 0.65);
@@ -178,6 +182,13 @@ section{
 .labelsDeResenas {
   color: white;
 }
+.listadoDeResenas{
+
+color: white;
+
+
+
+}
 .fechaEstreno h2{
   font-family: Poppins;
   font-weight: normal;
@@ -241,6 +252,7 @@ top: 39px;
 section{
   height: 130vh;
 }
+
 }
 
 
