--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -107,6 +107,22 @@
     </div>
       <% } %>
 
+<!-- lo que hicimos con mati -->
+
+<% if (typeof errores != "undefined"){ %>
+  <ul style = "color: red">
+  <% for (let i = 0; i < errores.lenght; i++){ %>
+    <li>
+      <%=errores[i]%>
+    </li>
+ <% } %>
+  </ul>
+
+<% } %>
+
+
+
+
 
 
 <button class= "botonResena uk-button uk-button-default uk-margin uk-button-secondary">Crear reseña</button>
