--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -111,7 +111,18 @@
 
 <button class= "botonResena uk-button uk-button-default uk-margin uk-button-secondary">Crear reseña</button>
 
-  
+ 
+
+<% if (typeof errores != "undefined") { %>
+  <ul style="color:red">
+      <% for (let i = 0; i < errores.length; i++) { %>
+          <li>
+              <%=errores[i]%>
+          </li>
+      <% } %>
+  </ul>
+<% } %>
+
 <form  class= "formularioResena resenas" action="/peliculas/detalle?idDePeli=<%=idPelicula%>" method="POST" style="display: none;" > 
                         
         <br> 
