--- a/views/usuariosResultados.ejs
+++ b/views/usuariosResultados.ejs
@@ -125,7 +125,7 @@
        
         <ul> 
         <li>
-            <a class="b" href="/usuario/detalle/<%=usuarios[i].id%>" >
+            <a class="b" href="/peliculas/usuario/<%=usuarios[i].id%>" >
              Nombre: <%=usuarios[i].nombre %>
         </li>
        
