--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -121,7 +121,7 @@
 
 
         <% for ( let i=0 ; i< unUsuario.resena.length; i++) { %> 
-    <p>
+    <p style="color: white;">
 
         Resenas: <%=unUsuario.resena[i].resenas %>
     </p>
