--- a/views/usuariosResultados.ejs
+++ b/views/usuariosResultados.ejs
@@ -127,6 +127,7 @@
         <li>
             <a class="b" href="/peliculas/usuario/<%=usuarios[i].id%>" >
              Nombre: <%=usuarios[i].nombre %>
+             Email: <%=usuarios[i].email %>
         </li>
        
     </ul>
