--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
         </li>
 
         <li id=""class="nav-item">
-          <a  href="/usuario/misResenas" class="nav-link" >Mis reseñas</a>
+          <a  href="/usuario/login" class="nav-link" >Mis reseñas</a>
         </li>
 
         <li class= "nav-item">
