session ok cookies falta

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,9 +24,13 @@
         <li id=""class="nav-item">
           <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
         </li>
+        <li id=""class="nav-item">
+          <a class="nav-link" href="/usuario/pruebaLogin">Login </a>
+        </li>
+        
 
         <li id=""class="nav-item">
-          <a  href="/usuario/login" class="nav-link" >Mis reseñas</a>
+          <a  href="/usuario/misResenas" class="nav-link" >Mis reseñas</a>
         </li>
 
         <li class= "nav-item">
