--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="/stylesheets/pagina.css">
+    <link rel="stylesheet" href="/stylesheets/misResenas.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
@@ -112,10 +113,10 @@
     </nav>
       </header>
     <section>
-    <h1>
+    <h1 style="color: white;">
         <%=unUsuario.nombre %>
     </h1>
-    <p>
+    <p style="color: white;">
         Email: <%=unUsuario.email %>
     </p>
 
